:sparkles: Feat:AWS 환경 구축 #30